# Plasma-SoC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  program.sh
constraints/: zedboard_master_XDC_RevC_D_v3.xdc
proj/quartus/: DE1_SOC.qpf  DE1_SOC.qsf  DE1_SOC.v  PLASMA_DE1_SOC.fit.rpt  PLASMA_DE1_SOC.flow.rpt  PLASMA_DE1_SOC.map.rpt  PLASMA_DE1_SOC.v  de1_soc.qsys  hps_sdram_p0_all_pins.txt  plasma_de1_soc.includes.sip  plasma_soc_hw.tcl  stp1.stp
proj/quartus/.qsys_edit/: de1_soc.xml  plasma_de1_soc.xml  preferences.xml
proj/quartus/db/: PLASMA_DE1_SOC.cbx.xml  PLASMA_DE1_SOC.lpc.txt  PLASMA_DE1_SOC.smp_dump.txt
proj/quartus/de1_soc/: de1_soc.xml  de1_soc_bb.v  de1_soc_inst.v
proj/quartus/de1_soc/synthesis/: de1_soc.qip  de1_soc.v
proj/quartus/hps_isw_handoff/de1_soc_hps_0/: emif.xml
proj/quartus/ip/: subsystemA.qsys
proj/quartus/mem_data/: sample.de1_soc_ram_image_block_0.mif  sample.de1_soc_ram_image_block_1.mif  sample.de1_soc_ram_image_block_2.mif  sample.de1_soc_ram_image_block_3.mif
proj/quartus/mem_data/old/: sample.de1_soc_ram_image_block_0.mif  sample.de1_soc_ram_image_block_1.mif  sample.de1_soc_ram_image_block_2.mif  sample.de1_soc_ram_image_block_3.mif
proj/quartus/output_files/: plasma_soc_top.flow.rpt  plasma_soc_top.map.rpt
proj/quartus/plasma_de1_soc/: plasma_de1_soc.xml  plasma_de1_soc_bb.v  plasma_de1_soc_inst.v  plasma_de1_soc_inst.vhd
proj/quartus_13.1/: DE1_SOC.v  hps_sdram_p0_all_pins.txt
proj/quartus_13.1/.qsys_edit/: de1_soc.xml  de1_soc_alternative.xml  layout.xml  preferences.xml  soc_system.xml
proj/quartus_13.1/de1_soc/: de1_soc.xml  de1_soc_bb.v  de1_soc_inst.v
proj/quartus_broken/: PLASMA_DE1_SOC_TOP.v  hps_sdram_p0_all_pins.txt  serv_req_info.txt
proj/quartus_broken/.qsys_edit/: plasma_de1_soc.xml  preferences.xml
proj/quartus_broken/plasma_de1_soc/: plasma_de1_soc.xml  plasma_de1_soc_bb.v  plasma_de1_soc_inst.v
proj/quartus_no_qsys/: PLASMA_DE1_SOC.v  PLASMA_DE1_SOC_NO_QSYS.qpf  PLASMA_DE1_SOC_NO_QSYS.qsf  simulation.do  wave.do
proj/quartus_no_qsys/mem_data/: sample.de1_soc_ram_image_block_0.mif  sample.de1_soc_ram_image_block_1.mif  sample.de1_soc_ram_image_block_2.mif  sample.de1_soc_ram_image_block_3.mif
proj/vivado/: plasma_soc.xpr  plasmax.xpr  tb_mem_init_sections_behav.wcfg  tb_oled_control_behav.wcfg  tb_plasma_vs_plasmax_behav.wcfg  tb_spi_control_behav.wcfg
rtl/: counter.vhd  gpio.vhd  plasma_soc.de1_soc.vhd  plasma_soc.vhd  plasma_soc_top.de1_soc.vhd  plasma_soc_top.vhd  plasmax.vhd  plasmax_if.vhd
rtl/avalon/: avalon_master2wb_slave.vhd  avalon_pkg.vhd  avalon_to_wb_bridge.1.vhd  avalon_to_wb_bridge.vhd  wb_to_avalon_test_proxy.vhd
rtl/counter/: slave_counter.vhd
rtl/gpio/: slave_gpio.vhd
rtl/irc/: ir_channel.vhd  ir_control.vhd  slave_irc.vhd
rtl/oled/: ascii_rom.vhd  oled_control.vhd  oled_if.vhd  slave_oledc.vhd
rtl/plasma/: mem_ctrl.vhd  mlite_cpu.vhd  mlite_pack.vhd  plasma.vhd  plasma_if.vhd  ram.vhd  ram_xilinx.vhd  reg_bank.altera.vhd  reg_bank.vhd  uart.vhd
rtl/spi/: slave_spi_control.vhd  spi_control.vhd  wb_slave_spi_control.vhd
rtl/timer/: slave_timer.vhd  timer.vhd
rtl/util/: fifo.vhd  util_pkg.vhd
rtl/wishbone/: arbiter.1.vhd  arbiter.vhd  arbiter_rr.vhd  shared_bus.vhd  wb_pkg.vhd  wb_pkg.zedboard.vhd
rtl/wishbone/wrapper/: master_cpu.vhd  slave_counter.vhd  slave_gpio.vhd  slave_irc.vhd  slave_memory.vhd  slave_misc.vhd  slave_uart.vhd  slave_uart_wrapper.vhd
sw/: CMakeLists.txt  settings.xml
sw/dma_drv/: plasma_de1_soc_system.h
sw/dma_drv/src/: hps2fpga_module.h
sw/examples/: CMakeLists.txt
sw/examples/src/: blink.c  blink_with_drivers.c  dump_sections.c  sample.c  test.c  testnew.c
sw/firmware/: CMakeLists.txt
sw/firmware/include/: no_os.h  plasma.h
sw/firmware/include/dev/: counter.h  display.h  gpio.h  irc.h  timer.h  uart.h
sw/firmware/include/kernel/: device.h  devicemap.h  interrupt.h  io.h  linked_list.h  memory.h
sw/firmware/include/sys/: file.h  memory.h  string.h  types.h  wait.h
sw/firmware/src/: boot.asm  bootloader.cpp  crt.asm  no_os.c  vectortable.asm
sw/firmware/src/drivers/: counter.c  display.c  irc.c  timer.c  uart.c
sw/firmware/src/kernel/: device.c  init.c  interrupt.c  io.c  kernel.c  memory.c
sw/firmware/src/stdlib/: file.c  memory.c  string.c  wait.c
sw/hps/: CMakeLists.txt  Makefile  boot.script  make-sdcard.sh  plasma_de1_soc_system.h
sw/hps/dts/: Makefile  de1soc3.17.xml  hps_common3.17.xml  skeleton.dtsi  soc_system_board_info.xml  socfpga.dtsi  socfpga_cyclone5_de1_soc.dts
sw/hps/include/: de1_soc.h  plasma_de1_soc_system.h
sw/hps/kernel/: defconfig  kernel.config  modules.txt
sw/hps/plasma-soc-drv/: CMakeLists.txt  Makefile  plasma-soc-drv.h  plsoc_counter.c  plsoc_counter.mod.c
sw/hps/plasma-soc-test/: Makefile  led_pattern_mgr.c  plasma-soc-test.1.c  plasma-soc-test.c  sysid.c  update_led_pattern.c
sw/hps/spl_bsp/: Makefile  settings.bsp
sw/hps/src/: dma2hps.c
tb/: plasma_soc.de1_soc.wb_to_avalon_proxy.vhd  tb_avalon_wb_bridge.vhd  tb_mem_init_sections.vhd  tb_oled_control.vhd  tb_plasma.de1_soc.vhd  tb_plasma.vhd  tb_plasma_soc.vhd  tb_plasma_vs_plasma_soc.vhd  tb_plasma_vs_plasmax.vhd  tb_plasmax.vhd  tb_spi_control.vhd  tb_wb_arbiter.vhd
(+163 files in other folders)
